--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "pg-format": "^1.0.4"
   },
   "devDependencies": {
     "jest": "^29.7.0",
